fix: issues and implement tests for new uncovered code (sonarqube analysis)